fixtures/messy_org/force-app/main/default/objects/Billing_Account__c/Billing_Account__c.object-meta.xml
<CustomObject>
    <label>Billing Account</label>
    <pluralLabel>Billing Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>