fixtures/messy_org/force-app/main/default/objects/Billing_Account__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <type>Picklist</type>
    <description>Current lifecycle status of the billing account (Active, Dunning, Closed).</description>
</CustomField>