fixtures/messy_org/force-app/main/default/objects/Billing_Account__c/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <label>ARR</label>
    <type>Currency</type>
</CustomField>