fixtures/messy_org/force-app/main/default/objects/Billing_Account__c/fields/Auto_Pay_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Auto_Pay_Enrolled__c</fullName>
    <label>Auto Pay Enrolled</label>
    <type>Checkbox</type>
    <description>True when the account is enrolled in automatic payment collection.</description>
</CustomField>