fixtures/messy_org/force-app/main/default/objects/Billing_Account__c/fields/Billing_Cycle_Day__c.field-meta.xml
<CustomField>
    <fullName>Billing_Cycle_Day__c</fullName>
    <label>Billing Cycle Day</label>
    <type>Number</type>
    <description>Day of the month on which the recurring invoice is generated.</description>
</CustomField>