fixtures/messy_org/force-app/main/default/objects/Billing_Account__c/fields/Contact2_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact2_Email__c</fullName>
    <label>Contact 2 Email</label>
    <type>Email</type>
</CustomField>