fixtures/messy_org/force-app/main/default/objects/Billing_Account__c/fields/Contact3_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact3_Email__c</fullName>
    <label>Contact 3 Email</label>
    <type>Email</type>
</CustomField>