fixtures/messy_org/force-app/main/default/objects/Billing_Account__c/fields/Credit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Credit_Balance__c</fullName>
    <label>Credit Balance</label>
    <type>Currency</type>
    <description>Unapplied credit currently held on the account, in account currency.</description>
</CustomField>