fixtures/messy_org/force-app/main/default/objects/Billing_Account__c/fields/Cust_Tier__c.field-meta.xml
<CustomField>
    <fullName>Cust_Tier__c</fullName>
    <label>Cust Tier</label>
    <type>Text</type>
</CustomField>