fixtures/messy_org/force-app/main/default/objects/Billing_Account__c/fields/Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier__c</fullName>
    <label>Customer Tier</label>
    <type>Text</type>
    <description>Customer value tier used for support SLAs (Bronze, Silver, Gold, Platinum).</description>
</CustomField>