fixtures/messy_org/force-app/main/default/objects/Billing_Account__c/fields/Dunning_Flag__c.field-meta.xml
<CustomField>
    <fullName>Dunning_Flag__c</fullName>
    <label>Dunning Flag</label>
    <type>Checkbox</type>
    <description>Dunning Flag</description>
</CustomField>