fixtures/messy_org/force-app/main/default/objects/Billing_Account__c/fields/Legacy_Bill_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Bill_Id__c</fullName>
    <label>Legacy Bill Id</label>
    <type>Text</type>
</CustomField>