fixtures/messy_org/force-app/main/default/objects/Billing_Account__c/fields/MRR__c.field-meta.xml
<CustomField>
    <fullName>MRR__c</fullName>
    <label>MRR</label>
    <type>Currency</type>
</CustomField>