fixtures/messy_org/force-app/main/default/objects/Billing_Account__c/fields/Pmt_Mthd__c.field-meta.xml
<CustomField>
    <fullName>Pmt_Mthd__c</fullName>
    <label>Pmt Mthd</label>
    <type>Text</type>
</CustomField>