fixtures/messy_org/force-app/main/default/objects/Billing_Account__c/validationRules/Require_Tier_For_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Tier_For_Active</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Account_Status__c,"Active"), ISBLANK(TEXT(Customer_Tier__c)))</errorConditionFormula>
    <errorMessage>An active billing account must carry a customer tier.</errorMessage>
</ValidationRule>